# wg-api

./: .env  Cargo.toml  README.md  routes.md  sqlx-data.json  start.bat  test.bat  todo.md
.github/workflows/: rust.yml
api/: Cargo.toml  README.md  routes.md  sqlx-data.json  todo.md
api/migrations/: 20221021113147_shema_v1.down.sql  20230112221937_cascade_constraints.down.sql  20230112221937_cascade_constraints.up.sql  20230518102837_transaction_table.up.sql  20240229105707_seeding.down.sql  20240229105707_seeding.up.sql
api/src/: auth.rs  db_types.rs  embedded_asset_serve.rs  file_uploads.rs  main.rs  routes.rs
api/src/schema/: equal_balance.rs  mod.rs  share.rs  upload.rs  user.rs  wg.rs
api/src/sql/: costs.sql  trxx1.sql
app/: Cargo.toml  TODO.md  build.rs  package-lock.json  package.json
app/src/: api.rs  constants.rs  identity_service.rs  main.rs  network_types.rs  style.css  time.rs
app/src/screens/: chores.rs  costs.rs  home.rs  mod.rs  settings.rs
common/: Cargo.toml
common/src/: auth.rs  lib.rs
migrations/: 20221021113147_shema_v1.down.sql  20221021113147_shema_v1.up.sql  20221023080322_shema_v2.down.sql  20221023080322_shema_v2.up.sql  20221102200612_equal_balance_wg.down.sql  20221102200612_equal_balance_wg.up.sql
src/: auth.rs  embedded_asset_serve.rs  file_uploads.rs  main.rs  routes.rs
src/public/: lmao.html
src/sql/: costs.sql  seeding.sql
tests/: e2e.rs
tests/common/: mod.rs
