[package]
name = "wg-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
sqlx = { version = "0.6.2", default-features = false, features = [ "runtime-actix-native-tls", "macros", "postgres", "json", "tls", "time", "migrate", "decimal" ] }
num-rational = { version = "0.4.1", features = ["serde"] } 
num-traits = "0.2.15"
rust_decimal = "1.26.1"

lazy_static = "1.4.0"
async_once = "0.2.6"

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_with = "2.0.1"
time = { version = "0.3.14", features = ["serde-well-known", "local-offset"] }

listenfd = "1.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
dotenvy = "0.15.5"