[package]
name = "wg-api"
version = "0.1.1"
edition = "2021"
authors = ["Kartonrad <hi@kartonrad.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-cors = "0.6.3"
tokio =  { version = "1.24.2", features = ["fs"] }
actix-multipart = "0.4.0"
rust-embed = "6.4.2"
mime_guess = "2.0.4"

sqlx = { version = "0.6.2", default-features = false, features = [ "offline", "runtime-tokio-rustls", "macros", "postgres", "json", "tls", "time", "migrate", "decimal" ] }
rust_decimal = "1.26.1"

lazy_static = "1.4.0"
async_once = "0.2.6"
futures-util = "0.3.24"
array-macro = "2.1.5"

thiserror = "1.0.37"

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_with = "2.0.1"
time = { version = "0.3.14", features = ["serde-well-known", "local-offset", "parsing"] }

jsonwebtoken = "8.1.1"
pbkdf2 = { version = "0.11.0" }
password-hash = { version = "0.4", features = ["alloc", "std"] }
base64 = "0.13.1"

listenfd = "1.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
dotenvy = "0.15.5"