[package]
name = "wg-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-router = "0.3.0"
dioxus-web = "0.3.1"
futures-lite = "1.13.0"
reqwest = { version = "0.11.16", features = ["json"]}
serde = "1.0.160"
serde_json = "1.0.96"
