[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
time = { version = "0.3.14", features = ["serde-well-known", "local-offset", "parsing"] }


sqlx = { version = "0.6.2", default-features = false, optional = true }

[features]
sqlx = ["dep:sqlx"]