[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version= "1.0.160", features = ["derive"]}
time = { version = "0.3.14", features = ["serde-well-known", "local-offset", "parsing"] }
rust_decimal = "1.26.1"
rust_decimal_macros = "1.29.1"

sqlx = { version = "0.7.3", optional = true }

[features]
sqlx = ["dep:sqlx"]